Fixed overflow in argument containers. Consistent monospace fonts. Other UI adjustments.

--- a/src/styles/ace_editor_xelis_p.css
+++ b/src/styles/ace_editor_xelis_p.css
@@ -12,7 +12,11 @@
 
 .ace_editor {
     background-color: #0b263500;
+    font: 12px / normal 'Source Code Pro', 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
+    line-height: 1.4rem !important;
 }
+
+
 
 /*.ace_gutter-cell {*/
 /*    background-color: black;*/
